--- a/css/style.css
+++ b/css/style.css
@@ -2535,6 +2535,27 @@ table thead .border-bottom-info th {
   margin: auto 0;
   color: #fff;
 }
+.detail-page-ul{
+  list-style-type:disc ;
+}
+.detail-page-ul>li>input{
+  border: none;
+  outline: none;
+  font-size: large;
+}
+.row-detals-label{
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: large;
+}
+.floww-details-form{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.floww-details-form>ul{
+  width: 50%;
+}
 @media only screen and (max-width: 992px) {
   .header-navbar .navbar-wrapper .navbar-logo {
     -webkit-box-pack: center;
