--- a/css/alltablestyles.css
+++ b/css/alltablestyles.css
@@ -48,3 +48,49 @@
   color: white;
   text-transform: capitalize;
 }
+.detail-page-ul{
+  list-style-type:disc ;
+}
+.detail-page-ul>li>input{
+  border: none;
+  outline: none;
+  font-size: large;
+}
+.detail-page-ul-input{
+  border: none;
+  outline: none;
+  font-size: large;
+  text-align: center;
+}
+.row-detals-label{
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: large;
+}
+.floww-details-form{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.floww-details-form>ul{
+  width: 50%;
+}
+.delivery-agent-list-table{
+  width:90%;
+  border-collapse: collapse;
+  border: 1px solid;
+  text-align: center;
+}
+.delivery-agent-list-table>thead>tr{
+  border: 1px solid;
+}
+.delivery-agent-list-table>thead>tr>td{
+  border: 1px solid;
+  font-weight: bold;
+}
+.delivery-agent-list-table>tbody>tr{
+  border: 1px solid;
+}
+.delivery-agent-list-table>tbody>tr>td{
+  border: 1px solid;
+}
