--- a/css/style.css
+++ b/css/style.css
@@ -1637,6 +1637,17 @@ a.bg-danger:hover {
   text-transform: capitalize;
   color: white;
 }
+.label-badge {
+  width: auto;
+  text-align: center;
+  background: orange;
+  padding: 5px 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: white;
+  background-color: teal;
+}
 .label-basic2 {
   width: 60%;
   text-align: center;
@@ -2534,27 +2545,6 @@ table thead .border-bottom-info th {
 .header-navbar .navbar-wrapper .navbar-logo a {
   margin: auto 0;
   color: #fff;
-}
-.detail-page-ul{
-  list-style-type:disc ;
-}
-.detail-page-ul>li>input{
-  border: none;
-  outline: none;
-  font-size: large;
-}
-.row-detals-label{
-  text-transform: capitalize;
-  font-weight: bold;
-  font-size: large;
-}
-.floww-details-form{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.floww-details-form>ul{
-  width: 50%;
 }
 @media only screen and (max-width: 992px) {
   .header-navbar .navbar-wrapper .navbar-logo {
