--- a/css/alltablestyles.css
+++ b/css/alltablestyles.css
@@ -2,11 +2,25 @@
   width: 90%;
   margin: auto;
   display: none;
-  padding-top: 20px;
+  /* padding-top: 20px; */
 }
-.floww-orderdetails > div:first-child {
+.floww-detailpage-header {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  margin-top: 20px;
+}
+.floww-orderdetails > div:nth-child(2) {
   display: flex;
   justify-content: space-between;
+}
+.floww-single-order-details > div {
+  padding: 30px;
+}
+.floww-single-order-details > div > div:nth-child(1) {
+  display: flex;
+  gap: 30px;
+  align-items: center;
 }
 .flow-table-details-div {
   display: flex;
@@ -48,49 +62,61 @@
   color: white;
   text-transform: capitalize;
 }
-.detail-page-ul{
-  list-style-type:disc ;
+.detail-page-ul {
+  list-style-type: disc;
 }
-.detail-page-ul>li>input{
+.detail-page-ul > li > input {
   border: none;
   outline: none;
   font-size: large;
 }
-.detail-page-ul-input{
+.detail-page-ul-input {
   border: none;
   outline: none;
   font-size: large;
   text-align: center;
 }
-.row-detals-label{
+.row-detals-label {
   text-transform: capitalize;
   font-weight: bold;
   font-size: large;
 }
-.floww-details-form{
+.floww-details-form {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.floww-details-form>ul{
+.floww-details-form > ul {
   width: 50%;
 }
-.delivery-agent-list-table{
-  width:90%;
+.delivery-agent-list-table {
+  width: 90%;
   border-collapse: collapse;
   border: 1px solid;
   text-align: center;
 }
-.delivery-agent-list-table>thead>tr{
+.delivery-agent-list-table > thead > tr {
   border: 1px solid;
 }
-.delivery-agent-list-table>thead>tr>td{
+.delivery-agent-list-table > thead > tr > td {
   border: 1px solid;
   font-weight: bold;
+  padding: 5px 10px;
 }
-.delivery-agent-list-table>tbody>tr{
+.delivery-agent-list-table > tbody > tr {
   border: 1px solid;
 }
-.delivery-agent-list-table>tbody>tr>td{
+.delivery-agent-list-table > tbody > tr > td {
   border: 1px solid;
+}
+.floww-filter-list > select {
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+.floww-filter-list > select > option {
+  padding: 5px 10px;
+}
+.floww-filter-list > select {
+  cursor: pointer;
 }
